src/test/deca/context/valid/created/while.deca
{
    while (TRUE) {
        println("Hello, world!");
    }
}