src/test/deca/context/invalid/created/while.deca
<<<<<<< HEAD
{
    while (1) {
        println("Hello, world!");
=======
// Resultats:
//    Erreur contextuelle
//    Ligne 15: while condition must be a boolean expression

{
    while(1+1) {
        println("aaa");
>>>>>>> feature/SansObjet/C
    }
}